@@ -1,3 +1,7 @@
+2000-12-26  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* download.html: increased version number to 2.3.26
+
 2000-03-31  olicha  <olivier.chapuis@free.fr>
 
 	* index.html:
